<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >UWSchedule</string>
    <string name="action_settings" >Settings</string>

	<!-- LoginActivity -->
	<string name="login">Log In</string>
	<string name="sync">Sync</string>
	<string name="uw_username_hint">UW NetID</string>
	<string name="password_hint">Password</string>

	<!-- Login Dialog Responses -->
	<string name="login_dialog_title">Login Error</string>
	<string name="login_response_ok">Logged in successfully</string>
	<string name="login_response_auth_error">Incorrect username or password</string>
	<string name="login_response_server_error">Unable to connect to server</string>
	<string name="login_response_network_error">Error connecting to network. Please check your connection status and try again.</string>
	<string name="login_response_timeout_error">Login has timed out. Please try again.</string>

	<!-- HomeActivity Drawer Strings -->
	<string name="drawer_open">Drawer Open</string>
	<string name="drawer_closed">Drawer Closed</string>
	<string name="drawer_group_home">Home</string>
	<string name="drawer_group_friends">Friends</string>
	<string name="drawer_group_favorites">Favorites</string>

	<!-- Schedule list course and meeting related descriptions -->
	<string name="meeting_time_separator">" - "</string>

	<!-- Generic Strings -->
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>

	<!-- Abbreviated named for days of the week -->
	<string name="monday_abbrev">M</string>
	<string name="tuesday_abbrev">Tu</string>
	<string name="wednesday_abbrev">W</string>
	<string name="thursday_abbrev">Th</string>
	<string name="friday_abbrev">F</string>
	<string name="saturday_abbrev">Sa</string>

</resources>
